--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "vite build",
     "build:firefox": "vite build --mode firefox",
     "lint": "eslint .",
+    "format": "prettier --write ./src",
+    "format:check": "prettier --check ./src",
     "preview": "vite preview",
     "icons": "bun scripts/generate-icons.ts"
   },
@@ -26,9 +28,11 @@
     "@types/webextension-polyfill": "^0.12.4",
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "prettier": "^3.7.4",
     "sharp": "^0.34.5",
     "tailwindcss": "^4.1.18",
     "typescript": "~5.9.3",
