firefox build working

--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "build:firefox": "vite build --mode firefox",
+    "dev": "vite --config vite.config.chrome.ts",
+    "dev:chrome": "vite --config vite.config.chrome.ts",
+    "dev:firefox": "vite --config vite.config.firefox.ts",
+    "build:chrome": "vite build --config vite.config.chrome.ts",
+    "build:firefox": "vite build --config vite.config.firefox.ts",
+    "build": "bun run build:chrome && bun run build:firefox",
     "lint": "oxlint",
     "lint:fix": "oxlint --fix",
     "format": "prettier --write ./src",
