--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Seen It - Hide Watched YouTube Videos",
   "version": "1.0.0",
-  "description": "Hide YouTube videos you've already watched based on your watch progress",
+  "description": "Hide YouTube videos you've already watched.",
   "permissions": ["storage"],
   "host_permissions": ["https://www.youtube.com/*"],
   "action": {
