fix build for firefox

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "vite --config vite.config.chrome.ts",
     "dev:chrome": "vite --config vite.config.chrome.ts",
     "dev:firefox": "vite --config vite.config.firefox.ts",
-    "build:chrome": "vite build --config vite.config.chrome.ts && zip -r dist/chrome.zip dist/chrome",
-    "build:firefox": "vite build --config vite.config.firefox.ts && zip -r dist/firefox.zip dist/firefox",
+    "build:chrome": "vite build --config vite.config.chrome.ts && cd dist/chrome && zip -r ../chrome.zip . -x '*.DS_Store'",
+    "build:firefox": "vite build --config vite.config.firefox.ts && cd dist/firefox && zip -r ../firefox.zip . -x '*.DS_Store'",
     "build": "rm -rf dist && mkdir dist && bun run build:chrome && bun run build:firefox",
     "lint": "oxlint",
     "lint:fix": "oxlint --fix",
